tests/snapshots/poetry__dependency_groups_strategy_merge_into_dev-2.snap
---
source: tests/poetry.rs
expression: "fs::read_to_string(project_path.join(\"pyproject.toml\")).unwrap()"
---
[project]
name = "foo"
version = "0.0.1"
requires-python = "~=3.11"
dependencies = ["arrow>=1.2.3,<2"]

[dependency-groups]
dev = [
    "factory-boy>=3.2.1,<4",
    "mypy>=1.13.0,<2",
]

[tool.uv]
package = false
